# fastapi-study

./: myapi.py  pyproject.toml
